[gd_scene load_steps=13 format=2]

[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ITCKRIST.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://background-1072755_1280.jpg" type="Texture" id=3]
[ext_resource path="res://MainMenuGD.gd" type="Script" id=4]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/723909__kevp888__2024-02-16_background-sound_game-music_remix.ogg" type="AudioStream" id=6]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1280, 1280 )
modulate_color = Color( 0.352941, 0.352941, 0.380392, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.686275, 0.686275, 0.686275, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.0218782, 0.0216064, 0.0234375, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 0, 3.14 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.290196, 0.294118, 0.305882, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.0218782, 0.0216064, 0.0234375, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 0, 3.14 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.945098, 0.952941, 0.976471, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.0218782, 0.0216064, 0.0234375, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 0, 3.14 )

[sub_resource type="DynamicFont" id=3]
size = 57
outline_size = 1
font_data = ExtResource( 2 )

[node name="MainMenuGD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -38.0
margin_right = 182.0
margin_bottom = 179.0
custom_constants/separation = 9

[node name="Button1" type="Button" parent="VBoxContainer"]
margin_right = 364.0
margin_bottom = 66.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 12
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Start game "

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 364.0
margin_bottom = 141.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 12
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 364.0
margin_bottom = 217.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 10
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Exit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.0
margin_top = 85.0
margin_right = 282.0
margin_bottom = 213.0
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_outline_modulate = Color( 0.337255, 0.403922, 0.47451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "Linguistic Learning"
align = 1
valign = 1

[node name="Hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -27.006
autoplay = true

[connection signal="mouse_entered" from="VBoxContainer/Button1" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button2" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button3" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
